<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vladus177.ru.testapp.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/full_name"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextMail"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPass"
        android:layout_below="@+id/editTextMail"
        android:layout_centerHorizontal="true"
        android:hint="@string/pass"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassRepeat"
        android:layout_below="@+id/editTextPass"
        android:layout_centerHorizontal="true"
        android:hint="@string/pass_repeat"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTerms"
        android:layout_below="@+id/editTextPassRepeat"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="15sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:id="@+id/buttonSignUp"
        android:layout_below="@+id/textViewTerms"
        android:layout_centerHorizontal="true"
        android:background="@color/colorSignButton"
        android:textColor="@color/my_white"
        android:textStyle="bold"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp"
        android:textSize="15sp" />

</RelativeLayout>
